# ProcExecMCP

./: .gitattributes  .gitignore  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/procexec/: __init__.py  __main__.py  server.py
src/procexec/tools/: __init__.py  execute.py  processes.py  schemas.py  search.py
src/procexec/utils/: validation.py
